# LANfactory

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  basic_tutorial.ipynb  basic_tutorial.md  index.html  lan_pipeline_env.yml  mkdocs.yml  objects.inv  pyproject.toml  setup.py  unused.py
.github/workflows/: build_wheels.yml  run_tests.yml
api/config/: index.html
api/lanfactory/: index.html
api/onnx/: index.html
api/trainers/: index.html
api/utils/: index.html
basic_tutorial/basic_tutorial/: index.html
basic_tutorial/data/: fileid_lan_runid_data_details.pickle  fileid_lan_runid_torch_training_history.csv
basic_tutorial/data/lan_mlp/: training_data_843d74eebbed11eebb516ae25f443f62.pickle
docs/: index.md
docs/api/: config.md  lanfactory.md  onnx.md  trainers.md  utils.md
docs/basic_tutorial/: basic_tutorial.ipynb  basic_tutorial_jax.ipynb
docs/overrides/: main.html
graveyard/: graveyard.py  keras_mlp.py
lanfactory/: __init__.py
lanfactory/config/: __init__.py  network_configs.py
lanfactory/onnx/: __init__.py  transform_onnx.py
lanfactory/trainers/: __init__.py  jax_mlp.py  keras_mlp.py  torch_mlp.py
lanfactory/utils/: __init__.py  data_loaders.py  util_funs.py
notebooks/: basic_tutorial.ipynb  basic_tutorial.md  basic_tutorial_cpn.ipynb  basic_tutorial_gonogo.ipynb  basic_tutorial_opn.ipynb
notebooks/test_notebooks/: load_jax_lan_cpn.ipynb  test_jax_network.ipynb  test_jax_network_cpn.ipynb  test_jax_network_tmp.ipynb  test_torch_network.ipynb
overrides/: main.html
search/: search_index.json
(+92 files in other folders)
