[build-system]
requires = ["setuptools", "wheel"]

[project.urls]
"Homepage"= "https://github.com/AlexanderFengler/LANFactory"
"Bug Tracker"= "https://github.com/AlexanderFengler/LANFactory/issues"

[project]
name= "lanfactory"
version= "0.4.4"
authors= [{name = "Alexander Fenger", email = "alexander_fengler@brown.edu"}]
description= "Package with convenience functions to train LANs"
readme = "README.md"
requires-python= ">3.8, <3.11"
classifiers= [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
    ]
dependencies=[
        "NumPy >= 1.17.0",
        "SciPy >= 1.6.3",
        "pandas >= 1.2.4",
        "torch >= 1.7",
        "jax >= 0.4.14",
        "flax >= 0.6.4",
        "optax >= 0.1.4",
        "tqdm >= 4.0.0",
    ]
keywords= ["LANs", "generative models", "cognitive science", "neuroscience", "sbi"]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]